AWE/src/objects/Rule_Execution_History__c.object
<CustomObject>
    <fields>
        <fullName>Actions__c</fullName>
        <label>Actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advance_Workflow__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Advance Workflow</label>
        <referenceTo>Advance_Workflow__c</referenceTo>
        <relationshipLabel>Rule Execution History</relationshipLabel>
        <relationshipName>Rule_Execution_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Criteria__c</fullName>
        <label>Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Evaluation__c</fullName>
        <label>Evaluation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Execution__c</fullName>
        <label>Execution</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_After_Action_Applied__c</fullName>
        <label>Record After Action Applied</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Before_Action_Applied__c</fullName>
        <label>Record Before Action Applied</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <label>Record ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Name__c</fullName>
        <label>Record Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RuleName__c</fullName>
        <description>RuleName__c</description>
        <label>Rule</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Execution_Status__c</fullName>
        <label>Rule Execution Status</label>
        <picklist>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rule_ID__c</fullName>
        <externalId>true</externalId>
        <label>Rule ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Object__c</fullName>
        <label>Rule_Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Version__c</fullName>
        <label>Rule Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule__c</fullName>
        <label>Rule</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Stamp__c</fullName>
        <label>Transaction_Stamp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Rule Execution History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Record_ID__c</columns>
        <columns>Record_After_Action_Applied__c</columns>
        <columns>Rule_Execution_Status__c</columns>
        <columns>Transaction_Stamp__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RH-{0000}</displayFormat>
        <label>History ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Execution History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>